# test_task_structurata

./: README.md  main.py  pyproject.toml  setup.cfg
sdk/: client.py  exceptions.py  schemas.py
services/: orchestrator.py
storage/: repository.py
tests/: test_logic.py
